cluster/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: mlflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mlflow.noise
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mlflow
            port:
              number: 5000
